Z-index attribute correction

--- a/week-02/css/usa-today.css
+++ b/week-02/css/usa-today.css
@@ -13,7 +13,6 @@ body{
     height: 480px;
     width: 100%;
     position: absolute;
-    display: inline-table;
     z-index: -1;
     background: linear-gradient(150deg,#d34600,50%,#fa9632);
 }
